@@ -284,6 +284,7 @@ private:
 
 	/** Available random map generators */
 	std::vector<map_generator*> map_generators_;
+	map_generator* last_map_generator_;
 
 	int current_context_index_;
 
