@@ -1,4 +1,7 @@
 Version 1.13.0+dev:
+ * Editor:
+   * Redesigned Generate Map dialog to use a real listbox and remember the
+     last choice during the same editor session.
  * Graphics:
    * New generic portrait for the Walking Corpse and Soulless
  * Language and i18n:
